--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /1-Intro/ej3/node_modules
 /2-Express/ej3/node_modules
 /2-Express/ej2/node_modules
+/2-Express/ej4/node_modules
+/2-Express/ej5/node_modules
+/2-Express/ej6/node_modules
+/2-Express/ej7/node_modules
+/2-Express/ej8/node_modules
