--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /2-Express/ej6/node_modules
 /2-Express/ej7/node_modules
 /2-Express/ej8/node_modules
+/3-Formularios/ejemplo/node_modules
+/3-Formularios/ej1/node_modules
