--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /2-Express/ej8/node_modules
 /3-Formularios/ejemplo/node_modules
 /3-Formularios/ej1/node_modules
+/4-Metodos/ejemplo/node_modules
