--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /3-Formularios/ejemplo/node_modules
 /3-Formularios/ej1/node_modules
 /4-Metodos/ejemplo/node_modules
+/4-Metodos/ej1/node_modules
