--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /4-Metodos/ejemplo/node_modules
 /4-Metodos/ej1/node_modules
 /6-MongoExpress/node_modules
+/6-MongoExpress/ejemplo/node_modules
+/6-MongoExpress/ej1/node_modules
