--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 /6-MongoExpress/node_modules
 /6-MongoExpress/ejemplo/node_modules
 /6-MongoExpress/ej1/node_modules
+/6-MongoExpress/ej2/node_modules
+/7-RutasExpress/ejemplo/node_modules
+/7-RutasExpress/ej1/node_modules
