--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /6-MongoExpress/ej2/node_modules
 /7-RutasExpress/ejemplo/node_modules
 /7-RutasExpress/ej1/node_modules
+/8-FuncionesIntermedias/node_modules
