--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /7-RutasExpress/ejemplo/node_modules
 /7-RutasExpress/ej1/node_modules
 /8-FuncionesIntermedias/node_modules
+/7-RutasExpress/ej1/.env
